--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.mongodb:mongodb-driver-sync:4.8.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'
 }
 
 test {
