--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:23.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.mongodb:mongodb-driver-sync:4.8.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'
+    implementation 'at.favre.lib:bcrypt:0.9.0'
 }
 
 test {
